2006-04-02  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2418]
	* sysdeps/unix/sysv/linux/bits/socket.h: Use larger of PATH_MAX and
	page size when allocating buffer.

2006-04-01  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2415]
	* elf/ldd.bash.in: Create better error messages for invalid input
	files.

	[BZ #2477]
	* sysdeps/unix/sysv/linux/i386/sysdep.h: Create correct LOADARGS_*
	macros for non-shared position-independent code.

	[BZ #2472]
	* bits/siginfo.h: Fix typo in ILL_ILLOPN definition.

	[BZ #2450]
	* posix/unistd.h: Match return value of readlink to what POSIX
	says these days.
	* io/readlink.c: Likewise.
	* io/readlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/readlinkat.c: Likewise.

	[BZ #2498]
	* nscd/connections.c (main_loop_poll): If the connection cannot be
	accepted because of user-imposed limits close the descriptor.

2006-03-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Versions: Export sync_file_range with
	GLIBC_2.5.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Remove
	LINUX_FADV_ASYNC_WRITE and LINUX_FADV_WRITE_WAIT.
	Declare sync_file_range and splice.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/wordsize-64/syscalls.list: Add
	sync_file_range.
	* sysdeps/unix/sysv/linux/i386/sync_file_range.S: New file.
	* sysdeps/unix/sysv/linux/syscalls.list: Add splice syscall.
	* sysdeps/unix/sysv/linux/Versions: Export splice with GLIBC_2.5
	version.
	* Versions.def: Define GLIBC_2.5 for libc.

2006-03-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): No need to duplicate